...
                                        <rect key="frame" x="10" y="10" width="60" height="60"/>
                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="topLeft"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="60" id="buP-6N-hld"/>
...
                                        <rect key="frame" x="80" y="10" width="60" height="60"/>
                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="topCenter"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="60" id="42W-dB-ssg"/>
...
                                        <rect key="frame" x="150" y="10" width="60" height="60"/>
                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="topRight"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="60" id="XcW-S8-JWa"/>
...
                                        <rect key="frame" x="10" y="80" width="60" height="60"/>
                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="centerLeft"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="542-ym-7yK"/>
...
                                        <rect key="frame" x="80" y="80" width="60" height="60"/>
                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="centerCenter"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="60" id="Alf-3T-5Pd"/>
...
                                        <rect key="frame" x="150" y="80" width="60" height="60"/>
                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="centerRight"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="F7r-xS-b62"/>
...
                                        <rect key="frame" x="10" y="150" width="60" height="60"/>
                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="bottomLeft"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="60" id="jOc-5i-MDr"/>
...
                                        <rect key="frame" x="80" y="150" width="60" height="60"/>
                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="bottomCenter"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="dj0-U9-h6w"/>
...
                                        <rect key="frame" x="150" y="150" width="60" height="60"/>
                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="bottomRight"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="60" id="ftb-Eq-UoM"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zqp-Tv-kfe">
                                        <rect key="frame" x="10" y="0.0" width="200" height="18"/>
                                        <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <nil key="textColor"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3kV-v6-Oru">
                                        <rect key="frame" x="10" y="38" width="200" height="42"/>
                                        <accessibility key="accessibilityConfiguration" identifier="startButton"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                                        <state key="normal" title="START"/>
...
