...
            btnSlot?.isUserInteractionEnabled = false
        }
    }
    
    // MARK: - Selected Invalid Position Alert
    func showAlertPlayerHasSelectedInvalidPosition() {
        let alert = UIAlertController(title: "Invalid Selection", message: "PLAYER-\(game.getCurrentPlayerString()) \n Please Select a Valid Position", preferredStyle: UIAlertController.Style.alert)
        alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
        self.present(alert, animated: true, completion: nil)
    }
}

